# pype

./: README.rst  pyproject.toml
.github/workflows/: ci-cd.yml
examples/logger/: __init__.py  commands.py  config.yml  strategy.py
pype/: __init__.py  __main__.py  cli.py  registry.py
pype/core/: __init__.py  command.py  pipeline.py  stage.py  strategy.py
pype/github/: __init__.py  vcs_adapter.py
pype/gitlab/: vcs_adapter.py
pype/vcs/: __init__.py  factory.py  protocols.py
tests/: test_pipeline.py
